# Rust-Training

./: README.md  check-rust-avail.bats  check-tmp-dir.bats
.github/workflows/: build-bf-interpreter.yml  mysql-avail.bats
session1/prob1-add-numbers/: Cargo.toml  numbers.txt
session1/prob1-add-numbers/src/: main.rs
session1/prob1-brainfuck/: Cargo.toml
session1/prob1-brainfuck/src/: main.rs
session1/ten-green-bottles/: Cargo.toml
session1/ten-green-bottles/src/: main.rs
session2/prob1-scores/: Cargo.toml  scores.txt
session2/prob1-scores/src/: main.rs
session2/prob2-brainfuck/: Cargo.toml
session2/prob2-brainfuck/src/: main.rs
session3/bft/: Cargo.toml
session3/bft/bft_interp/: Cargo.toml
session3/bft/bft_interp/src/: lib.rs
session3/bft/bft_types/src/: lib.rs
session3/bft/src/: main.rs
session4/bft/: Cargo.toml  invalid-program.bf
session4/bft/bft_interp/: Cargo.toml
session4/bft/bft_interp/src/: lib.rs
session4/bft/bft_types/src/: lib.rs
session4/bft/cli/src/: lib.rs
session4/bft/src/: cli.rs  main.rs
session5/: session-05.md
session5/bft/: Cargo.toml
session5/bft/bft_interp/: Cargo.toml
session5/bft/bft_types/: Cargo.toml
session5/bft/src/: main.rs
session6/: session-06.md
session6/bft/: Cargo.toml  extra-bracket.bf  tiny.bf
session6/bft/bft_interp/src/: lib.rs
session6/bft/bft_types/src/: lib.rs
session6/bft/src/: main.rs
session7/bft/: equal-bracket.bf  loop-three-times.bf  rot13.bf
session7/bft/bft_types/: Cargo.toml
session7/bft/cli/: Cargo.toml
session7/bft/src/: main.rs
(+10 files in other folders)
