[workspace]
members = [ "bft_types", "bft_interp" ]

[package]
name = "bft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bft_types = { version = "0.1.0", path = "bft_types" }
bft_interp = { version = "0.1.0", path = "bft_interp" }
cli = { version = "0.1.0", path = "cli" }
clap = { version = "4.1.11", features = ["derive", "cargo"] }
anyhow = "1.0.70"
thiserror = "1.0.40"
num-traits = "0.2.15"
bimap = "0.6.3"
